--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -1,78 +1,61 @@
-name: Build ARM64 Musl Python Binaries
+name: Build Nuitka Binary for OpenWrt aarch64-musl
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build-musl:
-    runs-on: ubuntu-latest
-    name: Build ${{ matrix.platform }} on python:3.10-alpine for musl
-    strategy:
-      matrix:
-        include:
-          - runs_on: ubuntu-22.04-arm
-            platform: arm64
-            python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250902/cpython-3.10.18+20250902-aarch64-unknown-linux-musl-install_only.tar.gz
-          # - runs_on: ubuntu-22.04
-          #   platform: x64
-          #   python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250828/cpython-3.10.18+20250828-x86_64-unknown-linux-musl-install_only.tar.gz
+  build:
+    runs-on: ubuntu-22.04-arm
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Install system deps
+      - name: Install dependencies
         run: |
-          sudo apt update
-          sudo apt install -y gcc g++ make patchelf libffi-dev tar
+          sudo apt-get update
+          sudo apt-get install -y build-essential musl musl-tools python3-pip wget
 
-      - name: Download musl-native Python 3.10
+      - name: Install Nuitka
         run: |
-          wget -O python-musl.tar.gz ${{ matrix.python_url }}
-          mkdir -p python-musl
-          tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
+          pip install -U pip wheel setuptools
+          pip install -U nuitka
 
-      - name: Build
+      - name: Download and build Python (musl static)
         run: |
-           docker run --rm \
-            -v "$PWD":/src -w /src \
-             alpine:latest sh -c "
-               apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-              ./python-musl/bin/python3 -m ensurepip &&
-              ./python-musl/bin/pip3 install -U pip setuptools wheel &&
-              ./python-musl/bin/pip3 install -r requirements.txt &&
-              ./python-musl/bin/pip3 install nuitka &&
-              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-            "
+          # 下载 Python 源码（这里用 3.11 作为示例）
+          wget https://www.python.org/ftp/python/3.11.9/Python-3.11.9.tgz
+          tar -xzf Python-3.11.9.tgz
+          cd Python-3.11.9
+
+          # 配置 musl 静态编译
+          CC=musl-gcc ./configure \
+              --prefix=/opt/python-musl \
+              --enable-optimizations \
+              --disable-shared \
+              LDFLAGS="-static"
+
+          make -j$(nproc)
+          make install
+
+      - name: Build binary with Nuitka
+        run: |
+          export PATH="/opt/python-musl/bin:$PATH"
+          which python3
+          python3 --version
+
+          python3 -m nuitka \
+              --standalone \
+              --onefile \
+              --static-libpython=yes \
+              --output-dir=dist \
+              --nofollow-import-to=numpy \
+              --remove-output down_aria2.py
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.platform }}-musl
-          path: dist/
-  
-  # build-arm64-musl:
-  #   name: Build arm64 (musl/Alpine)
-  #   runs-on: ubuntu-22.04-arm
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Build with Docker (Alpine)
-  #       run: |
-  #         docker run --rm \
-  #           -v "$PWD":/src -w /src \
-  #           python:3.10-alpine sh -c "
-  #             apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-  #             pip install -r requirements.txt &&
-  #             pip install nuitka &&
-  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
-  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-  #           "
-
-  #     - name: Upload artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: arm64-alpine
-  #         path: dist/
+          name: down_aria2-musl-aarch64
+          path: dist/down_aria2.bin
