--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -14,15 +14,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Download musl-native Python 3.10
+        run: |
+          wget -O python-musl.tar.gz https://github.com/astral-sh/python-build-standalone/releases/download/20250902/cpython-3.10.18+20250902-aarch64-unknown-linux-musl-install_only.tar.gz
+          mkdir -p python-musl
+          tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
+
       - name: Build with Docker (Alpine)
         run: |
           docker run --rm \
             -v "$PWD":/src -w /src \
             python:3.10-alpine sh -c "
-              apk add --no-cache binutils curl patchelf gcc musl-dev  &&
-              pip install -r requirements.txt &&
-              pip install nuitka &&
-              CC=musl-gcc nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+              apk add --no-cache binutils curl patchelf gcc musl-gcc musl-dev musl-tools &&
+              ./python-musl/bin/python3 install -r requirements.txt &&
+              ./python-musl/bin/python3 install nuitka &&
+              CC=musl-gcc ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
             "
 
       - name: Upload artifact
