--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -26,9 +26,8 @@ jobs:
             -v "$PWD":/src -w /src \
             alpine:latest sh -c "
               apk add --no-cache binutils curl patchelf gcc musl-dev &&
-              ./python-musl/bin/python3 -m ensurepip &&
-              ./python-musl/bin/python3 install -r requirements.txt &&
-              ./python-musl/bin/python3 install nuitka &&
+              ./python-musl/bin/pip3 install -r requirements.txt &&
+              ./python-musl/bin/pip3 install nuitka &&
               CC=musl-gcc ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
             "
 
