--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -1,38 +1,28 @@
-
-name: Build Nuitka Binary for OpenWrt aarch64-musl
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
+name: Build with Termux Docker
+on: [push]
 
 jobs:
   build:
-    name: Build arm64 (musl/Alpine)
     runs-on: ubuntu-22.04-arm
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download musl-native Python 3.10
+      - name: Run Termux in Docker
         run: |
-          wget -O python-musl.tar.gz https://github.com/astral-sh/python-build-standalone/releases/download/20250902/cpython-3.10.18+20250902-aarch64-unknown-linux-musl-install_only.tar.gz
-          mkdir -p python-musl
-          tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
 
-      - name: Build with Docker (Alpine)
-        run: |
-          docker run --rm \
-            -v "$PWD":/src -w /src \
-            alpine:latest sh -c "
-              apk add --no-cache binutils curl patchelf gcc musl-dev &&
-              ./python-musl/bin/pip3 install -r requirements.txt &&
-              ./python-musl/bin/pip3 install nuitka &&
-              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-            "
+          docker pull termux/package-builder:latest
+          
+          docker run --rm -v $PWD:/work termux/package-builder:latest bash -c "
+            cd /work
+            pkg update && pkg upgrade -y
+            pkg install python python-pip -y
+            pip install nuitka
+            python -m nuitka --standalone --onefile down_aria2.py
+          "
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: arm64-alpine
-          path: dist/
+          name: termux-docker-output
+          path: down_aria2
